# oc-cobot

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  config.toml  environment.yml  pyproject.toml  sim.py
assets/: workcell.usda
assets/basket/: basket_blue.usd  basket_pink.usd  basket_white.usd
assets/environments/: default.usda
assets/objects/: banana.usd  bar.usd  capsule.usd  cracker_box.usd  cube.usd  cylinder.usd  mustard_bottle.usd  tomato_soup_can.usd
assets/table/: table.usd
drake/: franka_pick.py  helpers.py  iiwa_pick.py  package.xml  pickplace.py  scenario_conveyor.yml  scenario_franka.dmd.yaml  scenario_franka.dmd.yml  scenario_iiwa.dmd.yml  scene.dmd.yaml  scene.dmd.yml
drake/example/: ex_iiwa_pick.py
drake/examples/: ex_iiwa_pick.py  ex_iiwa_pick_gripper_sketch.py  ex_jacobian_controller.py  ex_scenario.yaml
drake/franka_pick/: scenario_franka.dmd.yaml
drake/iiwa_pick/: gripper_trajectory.py  iiwa_pick.py  make_gripper_frames.py  scenario_iiwa.dmd.yaml  sketch_iiwa_pick.py
drake/models/: bin1.sdf  bin2.sdf  bin3.sdf  conveyor.sdf  sensor.sdf  table.sdf
exts/oc.cobot.conveyor/: setup.py
exts/oc.cobot.simple_scene/: setup.py
exts/oc.cobot.yolo/: setup.py
exts/oc.ex.yolo_cobot/: setup.py
launch/: __init__.py  launch.py
ros_ws/src/cobot/: CMakeLists.txt  package.xml
ros_ws/src/cobot/include/cobot/: mtc_conveyor_node.hpp
ros_ws/src/cobot/launch/: move.launch.py  pickplace.launch.py
ros_ws/src/cobot/src/: move.cpp  mtc_conveyor_node.cpp  pickplace.cpp
utils/: __init__.py  log.py  object.py  path.py  ui.py
(+39 files in other folders)
